# agentic-SDLC

./: .env.example  .gitignore  README.md  pyproject.toml  run.json
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  models.py
backend/app/agents/: architecture_reviewer.py  base.py  coder.py  designer.py  planner.py  planner_reviewer.py  requirement_analyzer.py  security_reviewer.py  semantic_validator.py  sprint_planner.py  tester.py
backend/app/api/: chat.py  code.py  health.py  llm.py  planner.py  runs.py  stats.py  ws.py
backend/app/core/: auth.py  config.py  db.py  errors.py  logging.py  middleware.py
backend/app/llm/: client.py  errors.py  gemini.py  groq.py  ollama.py  openrouter.py  types.py
backend/app/orchestrator/: events.py  repository.py  runner.py  runtime.py
backend/app/schemas/: __init__.py  api.py  clarifying_questions.py  code.py  critique.py  design.py  prd.py  review.py  sprint_plan.py  test_suite.py  validation.py
backend/tests/: conftest.py  fixtures.py  test_agents_base.py  test_artifact_versions_api.py  test_auth.py  test_chat_api.py  test_clarifications_api.py  test_code_api.py  test_coder.py  test_decision_api.py  test_designer.py  test_event_bus.py  test_health.py  test_llm_api.py  test_llm_gemini.py  test_models.py  test_ollama.py  test_orchestrator_runner.py  test_pipeline.py  test_planner.py  test_planner_api.py  test_repository.py  test_runs_api.py  test_schemas.py  test_semantic_validator.py  test_sprint_planner.py  test_stats.py  test_tester_agent.py  test_ws.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css  routeTree.gen.ts  start.ts  style.css
scripts/: ws_smoketest.py
(+58 files in other folders)
