[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Agentic SDLC Orchestrator — autonomous requirements & planning agents on top of Google Gemini."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mehereswar" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "tenacity>=9.0.0",
    "httpx>=0.27.2",
    "google-genai>=1.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-aiofiles",
]
llm = [
    "google-genai>=0.3.0",
    "langgraph>=0.2.40",
    "langchain-google-genai>=2.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "backend"
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx-ws>=0.9.0",
]
